--- a/css/creative.css
+++ b/css/creative.css
@@ -43,6 +43,9 @@ h6 {
 
 .text-faded {
   color: rgba(255, 255, 255, 0.7); }
+  
+.text-lightC {
+  color: rgba(255, 255, 255, 0.85); }
 
 section {
   padding: 8rem 0; }
